force-app/main/default/objects/SUBSECTORMASTER__x/SUBSECTORMASTER__x.object-meta.xml
<CustomObject>
    <description>SUBSECTORMASTERs</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>SUBSECTORMASTERs</externalName>
    <label>SUBSECTORMASTER</label>
    <pluralLabel>SUBSECTORMASTERs</pluralLabel>
</CustomObject>