force-app/main/default/objects/SUBSECTORMASTER__x/fields/SECTOR_ID__c.field-meta.xml
<CustomField>
    <fullName>SECTOR_ID__c</fullName>
    <description>SECTOR_ID</description>
    <externalDeveloperName>SECTOR_ID</externalDeveloperName>
    <label>SECTOR_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>