force-app/main/default/objects/SUBSECTORMASTER__x/fields/SUBSECTOR_ID__c.field-meta.xml
<CustomField>
    <fullName>SUBSECTOR_ID__c</fullName>
    <description>SUBSECTOR_ID</description>
    <externalDeveloperName>SUBSECTOR_ID</externalDeveloperName>
    <label>SUBSECTOR_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>