force-app/main/default/objects/SUBSECTORMASTER__x/fields/SUBSECTOR_NAME__c.field-meta.xml
<CustomField>
    <fullName>SUBSECTOR_NAME__c</fullName>
    <description>SUBSECTOR_NAME</description>
    <externalDeveloperName>SUBSECTOR_NAME</externalDeveloperName>
    <label>SUBSECTOR_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>